-added minimal height of preview window to prevent shifting

--- a/src/app/components/query/query.component.scss
+++ b/src/app/components/query/query.component.scss
@@ -364,6 +364,7 @@ background-color: rgb(210, 209, 209);
     transform: translate(-50%, -50%);
     z-index: 10;
     width: 100%; 
+    height: 86%;
     max-height: 86%; 
     overflow: auto; 
 }
